src/test/deca/context/invalid/expr_cast_int_to_void.deca
// Test de la règle (3.39) : on ne peut pas cast de int vers void.
{
	void var1;
	int var2;
	var1 = (void)(var2);
}

// Résultat :
//# a
